Export: Make switches for literal examples work in include files.
When including s file in example or src markup, you can now also
specify the switches for code references and line numbering that work
also when directly adding SRC or EXAMPLE blocks.

Reported by Manish.

--- a/Changes.org
+++ b/Changes.org
@@ -26,6 +26,13 @@
 
     Thanks to Alan Davis for driving this change.
 
+*** Include files can now also process switches
+
+    The example and src switches like =-n= can now also be added
+    to inlcude file statements:
+
+: #+INCLUDE "~/.emacs" erc emacs-lisp -n -r
+
 * Version 6.17
 
 ** Overview
