--- a/index.org
+++ b/index.org
@@ -101,7 +101,7 @@ I keep current with Org mode development?]]
 
 * Documentation
 ** The Org manual
-   - Read the documentation [[file:manual/index.html][online]].
+   - Read the [[file:manual/index.html][documentation online]].
    - You can also have the entire manual in a [[file:org.html][single monolithic file]].
    - Download the documentation as a  [[file:org.pdf][PDF document]].
    - A [[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][Japanese translation]] of the manual (version 4.60), by Takeshi
@@ -131,7 +131,7 @@ I keep current with Org mode development?]]
 
    There is a mailing list for discussion about org-mode.
 
-   - Subscribe to it at [[http://lists.gnu.org/mailman/listinfo/emacs-orgmode][this webpage]].
+   - [[http://lists.gnu.org/mailman/listinfo/emacs-orgmode][Subscribe to it]] at the web interface.
    - Directly [[mailto:emacs-orgmode@gnu.org][send mail to it]].  If you are not subscribed, a moderator
      will look at the message before passing it through to the
      list.
@@ -162,8 +162,7 @@ You can always contribute with ideas and bug reports on the mailing
 list.  If you want to contribute a patch, code snippets, or a full
 add-on, this is very welcome too!  However, we can only make it an
 official part of Org-mode if you have signed a copyright assignment
-with the Free Software Foundation, because Org-mode is distributed as
-part of Emacs.  If this is what you want to do, [[file:request-assign-future.txt][here]] is the form that
-you have to fill in and [[mailto:assign@gnu.org][send]] to the [[http://www.fsf.org/][FSF]] with CC to the Org-mode
-maintainer.
+with the [[http://www.fsf.org/][Free Software Foundation]], because Org-mode is distributed as
+part of Emacs.  If this is what you want to do, use [[file:request-assign-future.txt][this form]], fill it
+in and [[mailto:assign@gnu.org,carsten.dominik@gmail.com][send]] it to the FSF with a copy to the Org-mode maintainer.
 
