Attachments: Allow user-chosen directory and inheritance
The directory used for attachments to an entry is by default chosen
automatically, with a name derived from the entry ID to make sure it
is unique.

However, in some cases it may be better to assign a user-chosen
directory to and entry, to be used for attachments.  This commits
implements this change.  See the documentation changes for information
on how things work.

Thanks to Jason Jackson for pushing this part.

The second change made bu this commit is that it is now possible to
inherit the attachment directory from a parent, so that an entire
project subtree can use a single directory.

--- a/Changes.org
+++ b/Changes.org
@@ -26,6 +26,21 @@
     empty except for the colon.    
 
 ** Details
+*** The attachment directory may now be chosen by the user
+
+    Instead of using the automatic, unique directory related to
+    the entry ID, you can also use a chosen directory for the
+    attachments of an entry.  This directory is specified by the
+    ATTACH_DIR property.  You can use `C-c C-a s' to set this
+    property.
+
+*** You can use a single attachment directory for a subtree
+
+    By setting the property ATTACH_DIR_INHERIT, you can now tell
+    Org that children of the entry should use the same directory
+    for attachments, unless a child explicitly defines its own
+    directory with the ATTACH_DIR property.  You can use the
+    command `C-c C-a i' to set this property in an entry.
 
 *** Better handling of inlined images in different backends
 
