--- a/Changes.org
+++ b/Changes.org
@@ -26,6 +26,17 @@
     empty except for the colon.    
 
 ** Details
+
+*** Include files can now also process switches
+
+    The example and src switches like =-n= can now also be added
+    to inlcude file statements:
+
+: #+INCLUDE "~/.emacs" src emacs-lisp -n -r
+
+    Thanks to Manish for pointing out that this was not yet
+    supported.
+
 *** Examples can be exported to HTML as text areas
     
     You can now specify a =-t= switch to an example or src block,
@@ -35,21 +46,13 @@
 
     Thanks to Ulf Stegemann for driving this development.
 
-*** The attachment directory may now be chosen by the user
+*** LaTeX_CLASS can be given as a property
 
-    Instead of using the automatic, unique directory related to
-    the entry ID, you can also use a chosen directory for the
-    attachments of an entry.  This directory is specified by the
-    ATTACH_DIR property.  You can use `C-c C-a s' to set this
-    property.
+    When exporting a single subtree by selectiong it as a region
+    before export, the LaTeX class for the export will be taken
+    from the =LaTeX_CLASS= property of the entry if present.
 
-*** You can use a single attachment directory for a subtree
-
-    By setting the property ATTACH_DIR_INHERIT, you can now tell
-    Org that children of the entry should use the same directory
-    for attachments, unless a child explicitly defines its own
-    directory with the ATTACH_DIR property.  You can use the
-    command `C-c C-a i' to set this property in an entry.
+    Thanks to Robert Goldman for this request.
 
 *** Better handling of inlined images in different backends
 
@@ -67,6 +70,15 @@
     make sure that the link has a description part which is not
     equal to the link part.
 
+*** Links by ID now continue to work in HTML exported files
+
+    If you make links by ID, these links will now still work in
+    HTML exported files, provided that you keep the relative path
+    from link to target file the same.
+
+    Thanks to Friedrich Delgado Friedrichs for pushing this over
+    the line.
+
 *** The relative timer can be paused
 
     The new command `C-c C-x ,' will pause the relative timer.
@@ -76,24 +88,21 @@
 
     Thanks to Alan Davis for driving this change.
 
-*** Include files can now also process switches
+*** The attachment directory may now be chosen by the user
 
-    The example and src switches like =-n= can now also be added
-    to inlcude file statements:
+    Instead of using the automatic, unique directory related to
+    the entry ID, you can also use a chosen directory for the
+    attachments of an entry.  This directory is specified by the
+    ATTACH_DIR property.  You can use `C-c C-a s' to set this
+    property.
 
-: #+INCLUDE "~/.emacs" src emacs-lisp -n -r
+*** You can use a single attachment directory for a subtree
 
-    Thanks to Manish for pointing out that this was not yet
-    supported.
-
-*** Links by ID now continue to work in HTML exported files
-
-    If you make links by ID, these links will now still work in
-    HTML exported files, provided that you keep the relative path
-    from link to target file the same.
-
-    Thanks to Friedrich Delgado Friedrichs for pushing this over
-    the line.
+    By setting the property ATTACH_DIR_INHERIT, you can now tell
+    Org that children of the entry should use the same directory
+    for attachments, unless a child explicitly defines its own
+    directory with the ATTACH_DIR property.  You can use the
+    command `C-c C-a i' to set this property in an entry.
 
 * Version 6.17
 
