--- a/index.org
+++ b/index.org
@@ -53,9 +53,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 
 - <2009-01-20 Tue>: Release 6.18
 
-* Current Version (TAG=6.18a)
+* Current Version (6.18c)
 
-The current version is TAG=6.18a.  To see what has changed in recent
+The current version is 6.18c.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -68,7 +68,7 @@ a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-TAG=6.18a.zip][zip file]] or [[file:org-TAG=6.18a.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.18c.zip][zip file]] or [[file:org-6.18c.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
