Tables: Support for references to remote tables
Formulas can now refer to fields and regions in other tables, be it in
the same file or even in different files.

This also opens the door for more interesting R support, because
arbitrary tables in a file can now be accessed with appropriate
commands.

Finally, this commit also introduces a convenience for creating
references in tables.  For the purpose of references, it will always
be *assumed* that there is another hline at the end if each table.  So
for example in a table that has only a single hline, to separate
header from data, you can now access all of column two with
"@I$2..@II$2".

--- a/Changes.org
+++ b/Changes.org
@@ -48,6 +48,23 @@
 	   into normal lines. 
 	 - if it is a normal line, turn all lines into headlines.
 
+*** Table formulas may now reference fields in other tables
+
+
+You may also reference constants, fields and ranges from a different table,
+either in the current file or even in a different file.  The syntax is
+
+: remote(NAME-OR-ID,REF)
+
+where /NAME/ can be the name of a table in the current file as
+set by a =#+TBLNAME: NAME= line before the table.  It can also be
+the ID of an entry, even in a different file, and the reference
+then refers to the first table in that entry.  /REF/ is an
+absolute field or range reference, valid in the referenced
+table.  Note that since there is no "current filed" for the
+cursor, all row and column references must be absolute, not
+relative.
+
 * Version 6.18
 ** Incompatible changes
 
