--- a/Changes.org
+++ b/Changes.org
@@ -10,7 +10,7 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
-* Version 6.19 (in preparation)
+* Version 6.19
 
   :PROPERTIES:
   :VISIBILITY: content
@@ -50,9 +50,9 @@
 
 *** Table formulas may now reference fields in other tables
 
-
-You may also reference constants, fields and ranges from a different table,
-either in the current file or even in a different file.  The syntax is
+You may now reference constants, fields and ranges from a
+different table, either in the current file or even in a
+different file.  The syntax is
 
 : remote(NAME-OR-ID,REF)
 
@@ -60,10 +60,24 @@ where /NAME/ can be the name of a table in the current file as
 set by a =#+TBLNAME: NAME= line before the table.  It can also be
 the ID of an entry, even in a different file, and the reference
 then refers to the first table in that entry.  /REF/ is an
-absolute field or range reference, valid in the referenced
-table.  Note that since there is no "current filed" for the
-cursor, all row and column references must be absolute, not
-relative.
+absolute field or range reference, valid in the referenced table.
+Note that since there is no "current filed" for the remote table,
+all row and column references must be absolute, not relative.
+
+*** A final hline is imagined in each table, for the sake of references
+
+Even if a table does not end with a hline (mine never do because I
+think it is not pretty), for the sake of references you can
+assume there is one.  So in the following table
+
+#+begin_src org
+| a | b |
+|---+---|
+| 1 | 2 |
+| 3 | 4 |
+#+end_src
+
+a reference like =@I$1..@II$2= will now work.
 
 *** A tags-todo search can now ignore timestamped items
     The variables =org-agenda-todo-ignore-with-date=,
@@ -76,9 +90,16 @@ relative.
     that also the tags-todo search may serve exactly this
     purpose, and that it might be good to have a way to make
     these variables also apply to the tags-todo search.  I can
-    see than, but could not convince myself to make this the
+    see that, but could not convince myself to make this the
     default.  A new variable must be set to make this happen:
     =org-agenda-tags-todo-honor-ignore-options=.
+
+*** =\par= can be used to force a paragraph break, also in footnotes
+
+The LaTeX idiom =\par= will insert a paragraph break at that
+location.  Normally you would simply leave an empty line to get
+such a break, but this is useful for footnotes whose definitions
+may not contain empty lines.
 
 * Version 6.18
 ** Incompatible changes
