--- a/Changes.org
+++ b/Changes.org
@@ -10,9 +10,13 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
-** Version 6.20
+* Version 6.20
+ :PROPERTIES:
+ :VISIBILITY: content
+ :END:
 
 ** Details
+
 *** Support for simple TODO dependencies
 
 John Wiegley's code for enforcing simple TODO dependencies has
@@ -43,15 +47,18 @@ DONE.  Here is an example:
 ,** TODO b, needs to wait for (a)
 ,** TODO c, needs to wait for (a) and (b)
 #+end_src
+
 The variable =org-agenda-dim-blocked-tasks= controls how blocked
 entries should appear in the agenda, where they can be dimmed or
 even made invisible.
 
-** Version 6.19
-  :PROPERTIES:
-  :VISIBILITY: content
-  :END:
+*** Support for shift-selection in Emacs 23
 
+Customize the variable =org-support-shift-select= to use S-cursor
+key for selecting text.  Make sure that you carefully read the
+docstring of that variable first.
+
+* Version 6.19
 
 ** Overview
    
