Dependencies: Key bindings and Menu entries
This commit adds a key (`C-c C-x o') to toggle the ORDERED property of
a tree.  And it adds menu entries for doing this, which also reflect
the current state of the tree.

--- a/Changes.org
+++ b/Changes.org
@@ -48,6 +48,9 @@ DONE.  Here is an example:
 ,** TODO c, needs to wait for (a) and (b)
 #+end_src
 
+The command =C-c C-x o= toggles the value of the =ORDERED=
+property.
+
 The variable =org-agenda-dim-blocked-tasks= controls how blocked
 entries should appear in the agenda, where they can be dimmed or
 even made invisible.
