--- a/Changes.org
+++ b/Changes.org
@@ -15,6 +15,8 @@
  :VISIBILITY: content
  :END:
 
+This covers everything unp to and including 6.20i.
+
 ** Details
 
 *** Support for simple TODO dependencies
