--- a/Changes.org
+++ b/Changes.org
@@ -10,10 +10,61 @@
 #+LINK_UP: index.html
 #+LINK_HOME: http://orgmode.org
 
-* Version 6.21
+* Version 6.22 (in preparation)
  :PROPERTIES:
  :VISIBILITY: content
  :END:
+
+** Details
+
+*** org-choose.el by Tom Breton is now included
+
+Org-choose helps documenting a decision-making process by using
+TODO keywords for different degree of chosenness, and by
+automatically un-choosing the previously chosen alternative when
+another one gets chosen.
+
+This package inserts itself into Org using hooks, so if other
+people would like to do interesting stuff with TODO keywords for
+special purposes, Tom's code might be a good way to start.
+
+*** orgmode.org and Worg css works now better on IE
+
+Thanks to Sebastian Rose for making these changes.
+
+*** When exporting a subtree, headline levels are now relative to parent
+
+This was reported by William Henney and is fixed now.
+
+*** Inactive dates in tables can be used for sorting.
+
+When sorting table fields or entries by date, Org first tries to
+find an active date, and, if none exist, uses a passive date if
+present.
+
+This was a request by Hsui-Khuen Tang
+
+*** The default for org-return-follows-link is back to nil
+
+Setting it to t violates Emacs rules to some extend.  The
+internal implementation of this has been improved, so setting it
+to t should now be pretty stable.
+
+*** Automatic scheduling of siblings with org-depend.el
+
+The sibling of a DONE task can now automatically be scheduled.
+
+This was a patch by Andrew Hyatt.
+
+*** New skipping conditions
+
+The functions =org-agenda-skip-entry-if= and
+=org-agenda-skip-subtree-if= now accept =timestamp= and
+=nottimestamp= as additional conditions.
+
+This was in response to a request by Saurabh Agrawal.
+
+* Version 6.21
 
 ** Details
 
